--- a/css/svg-overlays.css
+++ b/css/svg-overlays.css
@@ -1,6 +1,6 @@
 .graphic-container {
   position: absolute;
-  width: 100vw;
+  width: 100%;
   height: 120vw;
   top: 0;
   left: 0;
@@ -43,5 +43,10 @@
     width: 14%;
     top: 5%;
     left: 10%;
+  }
+}
+@media all and (device-width: 320px) and (device-height: 480px) and (orientation: portrait) {
+  .graphic-container {
+    height: 384px;
   }
 }
